--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="bg-gray-100">
+  <body>
     <noscript>
       You need to enable JavaScript to use this application.
     </noscript>
